# cookiecutter-custom-gnome-session-desktop-session

./: README.adoc  cookiecutter.json  meson.build  meson_options.txt  {{cookiecutter.workflow_name}}.desktop  {{cookiecutter.workflow_name}}.desktop.in  {{cookiecutter.workflow_name}}.gnome-session.in
{{ cookiecutter.workflow_name }}/: README.adoc  default.nix  meson.build  {{ cookiecutter.workflow_name }}.bin.in  {{ cookiecutter.workflow_name }}.desktop  {{ cookiecutter.workflow_name }}.desktop.in  {{ cookiecutter.workflow_name }}.gnome-session.in  {{ cookiecutter.workflow_name }}.service  {{ cookiecutter.workflow_name }}.systemd-conf.in  {{ cookiecutter.workflow_name }}.target
{{cookiecutter.workflow_name}}/: README.adoc  default.nix  {{cookiecutter.workflow_name}}.bin.in  {{cookiecutter.workflow_name}}.service  {{cookiecutter.workflow_name}}.systemd-conf.in
